stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_list_pattern_non_list.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/list_pattern_non_list.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × match pattern has incompatible type
   ╭─[tests/fixtures/diagnostics/types/list_pattern_non_list.ml:3:5]
 2 │   match 1 {
 3 │     [] -> dbg("empty"),
   ·     ─┬
   ·      ╰── list pattern expects a list, but the matched value has type `i64`
 4 │     _ -> dbg("fallback")
   ╰────
  help: match lists with `[]` or `[head, ..tail]`
